Closed Bug 1660361 Opened 4 years ago Closed 4 years ago

Crash in [@ mozilla::ipc::MessageChannel::Send | mozilla::ipc::IProtocol::ChannelSend | IPC_Message_Name=PWebSocket::Msg_OnMessageAvailable]

Categories

(Core :: Networking: WebSockets, defect, P2)

Unspecified
Windows 7
defect

Tracking

()

RESOLVED FIXED
82 Branch
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- wontfix
firefox79 --- wontfix
firefox80 --- wontfix
firefox81 --- wontfix
firefox82 --- fixed

People

(Reporter: sefeng, Assigned: kershaw)

Details

(Keywords: crash, Whiteboard: [necko-triaged])

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/fcbd1bb8-27a9-453e-82b5-106e40200820

Top 10 frames of crashing thread:

0 xul.dll mozilla::ipc::MessageChannel::Send ipc/glue/MessageChannel.cpp:984
1 xul.dll mozilla::ipc::IProtocol::ChannelSend ipc/glue/ProtocolUtils.cpp:466
2 xul.dll mozilla::net::PWebSocketParent::SendOnMessageAvailable ipc/ipdl/PWebSocketParent.cpp:137
3 xul.dll mozilla::net::WebSocketChannelParent::OnMessageAvailable netwerk/protocol/websocket/WebSocketChannelParent.cpp:224
4 xul.dll mozilla::net::CallOnMessageAvailable::Run netwerk/protocol/websocket/WebSocketChannel.cpp:535
5 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1234
6 xul.dll NS_ProcessNextEvent xpcom/threads/nsThreadUtils.cpp:504
7 xul.dll mozilla::ipc::MessagePump::Run ipc/glue/MessagePump.cpp:109
8 xul.dll MessageLoop::RunHandler ipc/chromium/src/base/message_loop.cc:309
9 xul.dll MessageLoop::Run ipc/chromium/src/base/message_loop.cc:291

The majority of the crashes are on Windows. The crash reason is MOZ_CRASH("IPC message size is too large");.

Component: IPC → Networking: WebSockets

I think we should send data in chunks to child process as what we did in HttpBackgroundChannelParent.

Assignee: nobody → kershaw
Severity: -- → S3
Priority: -- → P2
Whiteboard: [necko-triaged]
Pushed by kjang@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/ec21a1e3f01d
Send data in chunks from WebSocketChannelParent to WebSocketChannelChild r=valentin
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: