Bug 1660361 - Send data in chunks from WebSocketChannelParent to WebSocketChannelChild r=valentin

Differential Revision: https://phabricator.services.mozilla.com/D88155