netwerk/protocol/websocket/WebSocketChannelChild.cpp
@@ -294,11 +294,22 @@ class MessageEvent : public WebSocketEvent {
   bool mBinary;
 };
 
-mozilla::ipc::IPCResult WebSocketChannelChild::RecvOnMessageAvailable(
-    const nsCString& aMsg) {
-  mEventQ->RunOrEnqueue(new EventTargetDispatcher(
-      this, new MessageEvent(aMsg, false), mTargetThread));
+void WebSocketChannelChild::RecvOnMessageAvailableInternal(
+    const nsDependentCSubstring& aMsg, bool aMoreData, bool aBinary) {
+  if (aMoreData) {
+    mReceivedMsgBuffer.Append(aMsg);
+    return;
+  }
 
+  mReceivedMsgBuffer.Append(aMsg);
+  mEventQ->RunOrEnqueue(new EventTargetDispatcher(
+      this, new MessageEvent(mReceivedMsgBuffer, aBinary), mTargetThread));
+  mReceivedMsgBuffer.Truncate();
+}
+
+mozilla::ipc::IPCResult WebSocketChannelChild::RecvOnMessageAvailable(
+    const nsDependentCSubstring& aMsg, const bool& aMoreData) {
+  RecvOnMessageAvailableInternal(aMsg, aMoreData, false);
   return IPC_OK();
 }
 
@@ -319,10 +330,8 @@ void WebSocketChannelChild::OnMessageAvailable(const nsCString& aMsg) {
 }
 
 mozilla::ipc::IPCResult WebSocketChannelChild::RecvOnBinaryMessageAvailable(
-    const nsCString& aMsg) {
-  mEventQ->RunOrEnqueue(new EventTargetDispatcher(
-      this, new MessageEvent(aMsg, true), mTargetThread));
-
+    const nsDependentCSubstring& aMsg, const bool& aMoreData) {
+  RecvOnMessageAvailableInternal(aMsg, aMoreData, true);
   return IPC_OK();
 }
 
